tests/integrations/basic/tests/actual_tests/rustfix-multiple.2.fixed.rs
pub fn f() -> usize {
    1
}

pub fn g() -> usize {
    f() //~ ERROR: mismatched types
}

fn main() {}
